# exoplanets-hunting-pipeline

./: .gitignore  LICENSE  README.md  milestone-plan.md  pyproject.toml
.ai-orchestrator/workflows/research/modern-pipeline/: 01-research.md  02-summary.md  context.md  state.json
.docs/: milestone-03-parameter-estimation-theory.md  research_manual.md
.github/workflows/: ci.yml
docs/plans/active/: 001_runtime_config_passthrough.md  003_eliminate_duplication.md  004_iterative_search_semantics.md  005_per_run_output_isolation.md
docs/plans/completed/: 002_pipeline_decomposition.md
examples/: output-example-candidates.json
src/exohunt/: batch.py  bls.py  cache.py  candidates_io.py  centroid.py  cli.py  collect.py  config.py  crossmatch.py  ephemeris.py  ingest.py  known_transit_masking.py  manifest.py  metrics_io.py  models.py  parameters.py  pipeline.py  plotting.py  stellar.py  validation.py  vetting.py
src/exohunt/presets/: deep-search.toml  iterative-search.toml  quicklook.toml  science-default.toml
tests/: conftest.py  test_analysis_modules.py  test_cli.py  test_config.py  test_iterative_bls.py  test_new_apis.py  test_p1_fixes.py  test_phasefold_visibility.py  test_refactoring.py  test_runs.py  test_smoke.py
tests/fixtures/: fetch_pipeline_expected.json
