[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exohunt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "astropy",
  "lightkurve",
  "pandas",
]

[project.optional-dependencies]
plotting = [
  "plotly",
]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exohunt = ["presets/*.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
